--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 	<div class="band header">
 		<h1 class="logo">Termiko | Kotły C.O.</h1>
 	</div> <!-- end .band.heaeder -->
+
 	<div class="band cover">
 		<p> Zdjęcie główne </p>
-	</div>
+	</div><!-- end .band.cover -->
+
 	<div class="band navigation primary">
 		<ul>
 			<li><a href="#">Nawigacja główna</a></li>
@@ -23,13 +25,15 @@
 			<li><a href="#">Nawigacja główna</a></li>
 			<li><a href="#">Nawigacja główna</a></li>
 		</ul>
-	</div>
+	</div><!-- end .band.navigation.primary -->
+
 	<div class="band subject">
 		<h2>Przedmiot</h2>
 		<p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
 
 		<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
-	</div>
+	</div><!-- end .band.subject -->
+
 	<div class="band navigation secondary">
 		<ul>
 			<li><a href="#">Nawigacja dodatkowa</a></li>
@@ -39,13 +43,62 @@
 			<li><a href="#">Nawigacja dodatkowa</a></li>
 			<li><a href="#">Nawigacja dodatkowa</a></li>
 		</ul>
-	</div>
+	</div><!-- end .band.navigation.secondary -->
+
 	<div class="band description">
 		<h2>Opis</h2>
+		<div class="left-half">
 		<p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
 		<p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Curabitur blandit tempus porttitor.</p>
+		</div>
 		<p>Nulla vitae elit libero, a pharetra augue. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-	</div>
+		<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Sed posuere consectetur est at lobortis.</p>
+		<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec ullamcorper nulla non metus auctor fringilla. Sed posuere consectetur est at lobortis. Nullam quis risus eget urna mollis ornare vel eu leo. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+		<p>Donec sed odio dui. Curabitur blandit tempus porttitor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui.</p>
+	</div><!-- end .band.description -->
+
+	<div class="band why-we">
+		<h2>Dlaczego my</h2>
+		<ol>
+			<li>dlaczego</li>
+			<li>dlaczego</li>
+			<li>dlaczego</li>
+			<li>dlaczego</li>
+			<li>dlaczego</li>
+			<li>dlaczego</li>
+			<li>dlaczego</li>
+			<li>dlaczego</li>
+			<li>dlaczego</li>
+		</ol>
+	</div><!-- end .band.why-we -->
+
+	<div class="band technical">
+		<h2>Dane techniczne</h2>
+	</div><!-- end .band.technical -->
+
+	<div class="band sterowniki">
+		<h2>Sterowniki</h2>
+	</div><!-- end .band.sterowniki -->
+
+	<div class="band palniki">
+		<h2>Palniki</h2>
+	</div><!-- end .band.palniki -->
+
+	<div class="band other">
+		<h2>Inne aukcje</h2>
+	</div><!-- end .band.other -->
+
+	<div class="band gallery">
+		<h2>Galeria</h2>
+	</div><!-- end .band.gallery -->
+
+	<div class="band about">
+		<h2>O firmie</h2>
+	</div><!-- end .band.about -->
+
+	<div class="band footer">
+		<h2>Stopka</h2>
+	</div><!-- end .band.footer -->
 </div><!-- end .wrapper ->>
 
 </body>
