--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Termiko allegro 2016</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
@@ -15,91 +16,308 @@
 	</div> <!-- end .band.heaeder -->
 
 	<div class="band cover">
-		<p> Zdjęcie główne </p>
+		<!-- <p><br />Zdjęcie główne<br>Z informacjami kontaktowymi</p> -->
 	</div><!-- end .band.cover -->
 
 	<div class="band navigation primary">
 		<ul>
-			<li><a href="#">Nawigacja główna</a></li>
-			<li><a href="#">Nawigacja główna</a></li>
-			<li><a href="#">Nawigacja główna</a></li>
-			<li><a href="#">Nawigacja główna</a></li>
+			<li><a href="#">O firmie</a></li>
+			<li><a href="#">Nasze aukcje</a></li>
+			<li><a href="#">Komentarze</a></li>
+			<li><a href="#">Kontakt</a></li>
 		</ul>
 	</div><!-- end .band.navigation.primary -->
 
 	<div class="band subject">
-		<h2>Przedmiot</h2>
-		<p>Sed posuere consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+		<div class="left-half">
+			<h2>Kocioł C.O. z podajnikiem</h2>
+			<h3>Astro W2+</h3>
+			<p>Oferta dotyczy:<br /> 
+			consectetur est at lobortis. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+			<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+			<h4>Zalety kotła:</h4>
+			<ul class="quality">
+				<li>Tellus Ornare</li>
+				<li>Ullamcorper Quam Tristique</li>
+				<li>Fringilla Porta</li>
+				<li>Porta Sollicitudin Lorem</li>
+				<li>Ligula Egestas</li>
+			</ul>
+		</div>
+		<div class="right-half">
+			<img src="../images/astro-front.png" width="480px">
 
-		<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+			
+		</div>
+		<div class="clear"></div>
 	</div><!-- end .band.subject -->
 
 	<div class="band navigation secondary">
 		<ul>
-			<li><a href="#">Nawigacja dodatkowa</a></li>
-			<li><a href="#">Nawigacja dodatkowa</a></li>
-			<li><a href="#">Nawigacja dodatkowa</a></li>
-			<li><a href="#">Nawigacja dodatkowa</a></li>
-			<li><a href="#">Nawigacja dodatkowa</a></li>
-			<li><a href="#">Nawigacja dodatkowa</a></li>
+			<li><a href="#description">Opis</a></li>
+			<li><a href="#why-we">Dlaczego My</a></li>
+			<li><a href="#technical">Dane techniczne</a></li>
+			<li><a href="#sterowniki">Sterowniki</a></li>
+			<li><a href="#palniki">Palniki</a></li>
+			<li><a href="#gallery">Galeria</a></li>
+			<li><a href="#about">O nas</a></li>
 		</ul>
 	</div><!-- end .band.navigation.secondary -->
-
-	<div class="band description">
+	<div class="band description" id="description">
 		<h2>Opis</h2>
+		<hr />
 		<div class="left-half">
-		<p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-		<p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Curabitur blandit tempus porttitor.</p>
+			<p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+			<p>Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Curabitur blandit tempus porttitor.</p>
+			<h4>Spalane paliwa</h4>
+			<p>Z podajnika</p>
+			<ul class="paliwa podajnik">
+				<li>Ekogroszek</li>
+				<li>Miał</li>
+				<li>Ekogroszek z biomasą</li>
+			</ul>
+			<p>Na ruszcie dodatkowym</p>
+			<ul class="paliwa ruszt">
+				<li>Węgiel</li>
+				<li>Drewno</li>
+				<li>Brykiet</li>
+			</ul>
 		</div>
-		<p>Nulla vitae elit libero, a pharetra augue. Maecenas faucibus mollis interdum. Sed posuere consectetur est at lobortis. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-		<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Sed posuere consectetur est at lobortis.</p>
-		<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec ullamcorper nulla non metus auctor fringilla. Sed posuere consectetur est at lobortis. Nullam quis risus eget urna mollis ornare vel eu leo. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-		<p>Donec sed odio dui. Curabitur blandit tempus porttitor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui.</p>
+		<div class="right-half">
+			<img src="http://vps-1163492-9205.cp.homecloud.pl/termiko/images/astro-drzwiczki.jpg" width="486px">
+		</div>
+		<div class="clear"></div>
 	</div><!-- end .band.description -->
-
-	<div class="band why-we">
+	<div class="band cut">
+		<h2>Przekrój kotła</h2>
+		<hr />
+		<img src="../images/przekroj.jpg" alt="Przekrój kotła Astro W2">
+	</div><!-- end .band.cut -->
+	<div class="band why-we" id="why-we">
 		<h2>Dlaczego my</h2>
-		<ol>
-			<li>dlaczego</li>
-			<li>dlaczego</li>
-			<li>dlaczego</li>
-			<li>dlaczego</li>
-			<li>dlaczego</li>
-			<li>dlaczego</li>
-			<li>dlaczego</li>
-			<li>dlaczego</li>
-			<li>dlaczego</li>
-		</ol>
+		<hr />
+		<p><ol>
+			<li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
+			<li>Vestibulum id ligula porta felis euismod semper.</li>
+			<li>Nullam quis risus eget urna mollis ornare vel eu leo.</li>
+			<li>Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</li>
+			<li>Vestibulum id ligula porta felis euismod semper.</li>
+			<li>Maecenas sed diam eget risus varius blandit sit amet non magna.</li>
+			<li>Etiam porta sem malesuada magna mollis euismod.</li>
+			<li>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</li>
+			<li>Etiam porta sem malesuada magna mollis euismod.</li>
+			<li>Sed posuere consectetur est at lobortis.</li>
+		</ol></p>
 	</div><!-- end .band.why-we -->
 
-	<div class="band technical">
+	<div class="band technical" id="technical">
 		<h2>Dane techniczne</h2>
+		<hr />
+		<p>Vestibulum id ligula porta felis euismod semper. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Sed posuere consectetur est at lobortis. Donec id elit non mi porta gravida at eget metus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+		<img src="../images/astro-przekroj.jpg" alt="Wymiary i przekroj kotła">
+		<img src="../images/astro-dane-techniczne.jpg" alt="Dane techniczne kotła Astro W2">
+		<img src="../images/astro-wymiary-paleniska.jpg" alt="Wymiary paleniska dodatkowego">
+		<img src="../images/astro-ceny.jpg" alt="Moce i ceny kotłów z modelu Astro W2">
+		<img src="../images/astro-opcje.jpg" alt="Moce kotłów z modelu Astro W2">
 	</div><!-- end .band.technical -->
 
-	<div class="band sterowniki">
-		<h2>Sterowniki</h2>
+	<div class="band sterowniki" id="sterowniki">
+		<h2>Dostępne sterowniki kotła</h2>
+		<hr />
+		<img src="../images/sterownik-sp18.jpg">
+		<img src="../images/sterownik-sp18l.jpg">
+		<img src="../images/sterownik-sp24l+.jpg">
+		<!-- <img src="../images/sterownik-pilot-r.jpg"> -->
 	</div><!-- end .band.sterowniki -->
 
-	<div class="band palniki">
+	<div class="band palniki" id="palniki">
 		<h2>Palniki</h2>
+		<hr />
+		<img src="../images/palnik01.jpg">
+		<img src="../images/palnik02.jpg">
+		<img src="../images/palnik03.jpg">
+		<!-- <img src="../images/palnik04.jpg"> -->
 	</div><!-- end .band.palniki -->
 
-	<div class="band other">
+	<div class="band other" id="other">
 		<h2>Inne aukcje</h2>
+		<hr />
 	</div><!-- end .band.other -->
 
-	<div class="band gallery">
+	<div class="band gallery" id="gallery">
 		<h2>Galeria</h2>
+		<hr />
+		<p>Vestibulum id ligula porta felis euismod semper. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Sed posuere consectetur est at lobortis. Donec id elit non mi porta gravida at eget metus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+		<ul class="lbox-album">
+
+			<li>
+				<a href="#image-1">
+					<img src="../images/astro/astro05m.jpg" alt="Kocioł Astro W2">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-1">
+					<img src="../images/astro/astro-01.jpg" alt="Kocioł Astro W2" />
+					<div>
+
+						<a href="#image-5" class="lbox-prev">Prev</a>
+						<a href="#image-2" class="lbox-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X Zamknij</a>
+				</div>
+			</li>
+
+			<li> 
+				<a href="#image-2">
+					<img src="../images/astro/astro02m.jpg" alt="Kocioł Astro W2">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-2">
+					<img src="../images/astro/astro-02.jpg" alt="Kocioł Astro W2" />
+					<div>
+						<a href="#image-1" class="lbox-prev">Prev</a>
+						<a href="#image-3" class="lbox-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X ZAMKNIJ</a>
+				</div>
+			</li>
+
+			<li> 
+				<a href="#image-3">
+					<img src="../images/astro/astro02m.jpg" alt="image01">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-3">
+					<img src="../images/astro/astro02.jpg" alt="image01" />
+					<div>
+						<a href="#image-2" class="lbox-prev">Prev</a>
+						<a href="#image-4" class="lbox-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X ZAMKNIJ</a>
+				</div>
+			</li>
+
+			<li> 
+				<a href="#image-4">
+					<img src="../images/astro/astro04m.jpg" alt="image01">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-4">
+					<img src="images/full/1.jpg" alt="image01" />
+					<div>
+						<a href="#image-3" class="lbox-prev">Prev</a>
+						<a href="#image-5" class="lbox-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X ZAMKNIJ</a>
+				</div>
+			</li>
+
+			<li> 
+				<a href="#image-5">
+					<img src="../images/astro/astro03m.jpg" alt="image01">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-5">
+					<img src="images/full/1.jpg" alt="image01" />
+					<div>
+						<a href="#image-4" class="lbox-prev">Prev</a>
+						<a href="#image-1" class="lbox-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X ZAMKNIJ</a>
+				</div>
+			</li>
+
+<!-- 			<li> 
+				<a href="#image-1">
+					<img src="../images/astro/astro05m.jpg" alt="image01">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-1">
+					<img src="images/full/1.jpg" alt="image01" />
+					<div>
+						<a href="#image-10" class="lb-prev">Prev</a>
+						<a href="#image-2" class="lb-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X ZAMKNIJ</a>
+				</div>
+			</li>
+			
+			<li> 
+				<a href="#image-1">
+					<img src="../images/astro/astro05m.jpg" alt="image01">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-1">
+					<img src="images/full/1.jpg" alt="image01" />
+					<div>
+						<a href="#image-10" class="lb-prev">Prev</a>
+						<a href="#image-2" class="lb-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X ZAMKNIJ</a>
+				</div>
+			</li>
+			
+			<li> 
+				<a href="#image-1">
+					<img src="../images/astro/astro05m.jpg" alt="image01">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-1">
+					<img src="images/full/1.jpg" alt="image01" />
+					<div>
+						<a href="#image-10" class="lb-prev">Prev</a>
+						<a href="#image-2" class="lb-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X ZAMKNIJ</a>
+				</div>
+			</li>
+			
+			<li> 
+				<a href="#image-1">
+					<img src="../images/astro/astro05m.jpg" alt="image01">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-1">
+					<img src="images/full/1.jpg" alt="image01" />
+					<div>
+						<a href="#image-10" class="lb-prev">Prev</a>
+						<a href="#image-2" class="lb-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X ZAMKNIJ</a>
+				</div>
+			</li>
+
+			<li> 
+				<a href="#image-1">
+					<img src="../images/astro/astro05m.jpg" alt="image01">
+					<span><img src="../images/zoom.gif" alt="Powiększ"></span>
+				</a>
+				<div class="lbox-overlay" id="image-1">
+					<img src="images/full/1.jpg" alt="image01" />
+					<div>
+						<a href="#image-10" class="lb-prev">Prev</a>
+						<a href="#image-2" class="lb-next">Next</a>
+					</div>
+					<a href="#page" class="lbox-close">X ZAMKNIJ</a>
+				</div>
+			</li> -->
+		</ul>
+		<div class="clear"></div>
 	</div><!-- end .band.gallery -->
 
-	<div class="band about">
-		<h2>O firmie</h2>
+	<div class="band about" id="about">
+		<h2>O nas</h2>
+		<hr />
 	</div><!-- end .band.about -->
-
+	
 	<div class="band footer">
 		<h2>Stopka</h2>
-	</div><!-- end .band.footer -->
-</div><!-- end .wrapper ->>
-
+		<hr />
+		<div class="left-half">
+			<p>Vestibulum id ligula porta felis euismod semper. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Sed posuere consectetur est at lobortis. Donec id elit non mi porta gravida at eget metus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+		</div>
+		<div class="right-half">
+			<p>Vestibulum id ligula porta felis euismod semper. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Sed posuere consectetur est at lobortis. Donec id elit non mi porta gravida at eget metus. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+		</div>
+		<h2>&nbsp;</h2>
 </body>
 </html>
